This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
2/18/18: SEM_3-6-15
2/16/18: Adjusted Low Dose post-image shift delay factors from 0.6 to 0.9 for
Record and from 2 to 1.5 for Focus.  Fixed Focus using Trial factor of 0.6 if
the two are tied together.

2/16/18: Arithmetic expressions are now allowed on all script commands
starting with "Set" and many others.

2/16/18: In camera setup dialog, fixed estimate of dose rate at camera for
difference in mag between low dose areas.

2/16/18: Fixed various aspects of doing coma-free alignment in Low Dose,
including focusing with Record and adding a big settling time when not
starting in Record.

2/10/18: Added routines for astigmatism correction and coma-free alignment by
CTF fitting to images with Thon rings.  The latter is much better than the old
coma-free alignment routine and requires no calibration.

2/10/18: Fixed Navigator "go to" movements when there are incorrect mag IS
offsets not being applied and superceded by View shift offset.  Also fixed
both "go to" and Realign to Item initial movement with Balance Shifts on.
(In 3.6).

2/10/18: Just ignore scripts beyond those allowed in the current version
instead of making it a settings read error, so settings files from versiosn
with more scripts can be read (In 3.6).

2/7/18: Fixed failure to read a settings file with a script line having more
than 40 words (In 3.6).

1/24/18: Stopped calling DM to ensure existence of dark reference for a K2
camera when post-actions are going to occur (In 3.6).

1/23/18: Added output on status bar of frequency and resolution for a point
clicked in FFT with middle mouse button.

1/23/18: Added ctffind module, options to support fitting to Thon rings when
click in FFT, and CtfFind script command to run it with specified parameters.
